added basic markdown docs

--- a/.github/workflows/retype-action.yml
+++ b/.github/workflows/retype-action.yml
@@ -3,6 +3,7 @@ on:
   workflow_dispatch:
   push:
     branches:
+      # change this branch to the branch you wish to track for deployment. For example a `docs` branch
       - main
 
 jobs:
